2001-09-06  Clint Adams  <clint@zsh.org>

	* 15740: Completion/compaudit: don't whine about
	/usr/local/**/*(/) in $fpath being root:staff 2755
	if we think we're on Debian.

	* 15739: Completion/compaudit: use getent instead
	of /etc/group if possible.

2001-09-03  Andrew Main (Zefram)  <zefram@zsh.org>

	* 15734: Doc/Zsh/zle.yo, Src/Zle/zle_hist.c, Src/Zle/zle_keymap.c,
	Src/Zle/zle_main.c, Src/Zle/zle_misc.c, Src/Zle/zle_params.c,
	Src/Zle/zle_thingy.c: zle -K option to select a keymap, and zle
	KEYMAP parameter to examine the current selection.

2001-08-28  Peter Stephenson  <pws@pwstephenson.fsnet.co.uk>

	* 15722: Completion/Unix/Command/_sh: handle zsh options.

	* 15720: Functions/Misc/zmv: use ${(e)...} as suggested by
	Bart; fix problem with option arguments with special characters;
	more consistency with shifting arguments; fix verbose mode
	output with backslashes.

2001-08-28  Sven Wischnowsky  <wischnow@zsh.org>

	* 15717: Src/subst.c, Src/Modules/parameter.c,
	Src/Zle/zle_misc.c: handle possible NULL pointer returned from
	bufferwords()

2001-08-27  Wayne Davison  <wayned@users.sourceforge.net>

	* 15713: Completion/Redhat/Command/_rpm: added package-specification
	options to the --verify command.

2001-08-27  Bart Schaefer  <schaefer@zsh.org>

	* 15708: Src/lex.c: Fix PS2 prompt when there's an open double
	quote inside an open braced-parameter expression.

2001-08-25  Bart Schaefer  <schaefer@zsh.org>

	* 15707: Src/init.c: Fix history crash caused by re-entering
	loop() when the `precmd' shell function uses `source' or `.'.

	* 15702: Doc/Zsh/expn.yo: Alphabetize (mostly) parameter flag
	descriptions; fix a couple of typos; parameter rule #12.
	
2001-08-24  Sven Wischnowsky  <wischnow@zsh.org>

	* 15705: Src/Zle/complete.c: test if hash table pointer is NULL
	to avoid SEGV with compstate=()

2001-08-22  Clint Adams  <clint@zsh.org>

	* 15683: Completion/Unix/Command/.distfiles,
	Completion/Unix/Command/_links: completion for
	links(1).
